@@ -1887,7 +1887,7 @@ typedef struct tagANIMATIONINFO {
 	UINT cbSize;
 	int iMinAnimate;
 } ANIMATIONINFO,*LPANIMATIONINFO;
-typedef struct tagCREATESTRUCT {
+typedef struct tagCREATESTRUCTA {
 	LPVOID	lpCreateParams;
 	HINSTANCE	hInstance;
 	HMENU	hMenu;
@@ -1897,14 +1897,32 @@ typedef struct tagCREATESTRUCT {
 	int	y;
 	int	x;
 	LONG	style;
-	LPCTSTR	lpszName;
-	LPCTSTR	lpszClass;
+	LPCSTR	lpszName;
+	LPCSTR	lpszClass;
 	DWORD	dwExStyle;
-} CREATESTRUCT,*LPCREATESTRUCT;
-typedef struct tagCBT_CREATEWND {
-	LPCREATESTRUCT lpcs;
+} CREATESTRUCTA,*LPCREATESTRUCTA;
+typedef struct tagCREATESTRUCTW {
+	LPVOID	lpCreateParams;
+	HINSTANCE	hInstance;
+	HMENU	hMenu;
+	HWND	hwndParent;
+	int	cy;
+	int	cx;
+	int	y;
+	int	x;
+	LONG	style;
+	LPCWSTR	lpszName;
+	LPCWSTR	lpszClass;
+	DWORD	dwExStyle;
+} CREATESTRUCTW,*LPCREATESTRUCTW;
+typedef struct tagCBT_CREATEWNDA {
+	LPCREATESTRUCTA lpcs;
 	HWND	hwndInsertAfter;
-} CBT_CREATEWND;
+} CBT_CREATEWNDA, *LPCBT_CREATEWNDA;
+typedef struct tagCBT_CREATEWNDW {
+	LPCREATESTRUCTW lpcs;
+	HWND	hwndInsertAfter;
+} CBT_CREATEWNDW, *LPCBT_CREATEWNDW;
 typedef struct tagCBTACTIVATESTRUCT {
 	BOOL fMouse;
 	HWND hWndActive;
@@ -2988,6 +3006,8 @@ typedef ICONMETRICSW ICONMETRICS,*LPICONMETRICS;
 typedef NONCLIENTMETRICSW NONCLIENTMETRICS,*LPNONCLIENTMETRICS;
 typedef SERIALKEYSW SERIALKEYS,*LPSERIALKEYS;
 typedef SOUNDSENTRYW SOUNDSENTRY,*LPSOUNDSENTRY;
+typedef CREATESTRUCTW CREATESTRUCT, *LPCREATESTRUCT;
+typedef CBT_CREATEWNDW CBT_CREATEWND, *LPCBT_CREATEWND;
 typedef MDICREATESTRUCTW MDICREATESTRUCT,*LPMDICREATESTRUCT;
 typedef MULTIKEYHELPW MULTIKEYHELP,*PMULTIKEYHELP,*LPMULTIKEYHELP;
 #define AppendMenu AppendMenuW
@@ -3134,6 +3154,8 @@ typedef ICONMETRICSA ICONMETRICS,*LPICONMETRICS;
 typedef NONCLIENTMETRICSA NONCLIENTMETRICS,*LPNONCLIENTMETRICS;
 typedef SERIALKEYSA SERIALKEYS,*LPSERIALKEYS;
 typedef SOUNDSENTRYA SOUNDSENTRY,*LPSOUNDSENTRY;
+typedef CREATESTRUCTA CREATESTRUCT, *LPCREATESTRUCT;
+typedef CBT_CREATEWNDA CBT_CREATEWND, *LPCBT_CREATEWND;
 typedef MDICREATESTRUCTA MDICREATESTRUCT,*LPMDICREATESTRUCT;
 typedef MULTIKEYHELPA MULTIKEYHELP,*PMULTIKEYHELP,*LPMULTIKEYHELP;
 #define AppendMenu AppendMenuA
